--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "devDependencies": {
     "generate-changelog": "^1.7.1",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
+    "@babel/preset-env": "7.1.0"
   },
   "scripts": {
     "test": "jest"
