--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "node-fetch": "^2.3.0"
   },
   "devDependencies": {
-    "generate-changelog": "^1.7.1",
-    "jest": "^24.9.0",
     "@babel/cli": "7.1.2",
     "@babel/core": "7.1.2",
-    "@babel/preset-env": "7.1.0"
+    "@babel/preset-env": "7.1.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.6.0",
+    "generate-changelog": "^1.7.1",
+    "jest": "^24.9.0",
+    "prettier-standard": "^15.0.1"
   },
   "scripts": {
     "test": "jest"
